--- a/build_kernel/SpaceX_defconfig
+++ b/build_kernel/SpaceX_defconfig
@@ -37,7 +37,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SpaceX-v0.1"
+CONFIG_LOCALVERSION="-SpaceX-v0.1a_Dev"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -322,8 +322,8 @@ CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 # CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
 # CONFIG_TIMA_RKP is not set
-# CONFIG_RKP_KDP is not set
-# CONFIG_RKP_DMAP_PROT is not set
+CONFIG_RKP_KDP=y
+CONFIG_RKP_DMAP_PROT=y
 # CONFIG_SEC_BAT_AUT is not set
 
 #
