Ramdisk: Set to Rooting; Remove Knox & some SS security stuff

--- a/build_kernel/ramdisk/init.rc
+++ b/build_kernel/ramdisk/init.rc
@@ -10,7 +10,6 @@ import /init.${ro.hardware}.rc
 import /init.${ro.zygote}.rc
 import /init.trace.rc
 import /init.sec_debug.rc
-import /init.container.rc
 import /init.rilcommon.rc
 
 on early-init
@@ -215,6 +214,11 @@ on late-init
 
     trigger early-boot
     trigger boot
+
+service injectsu /system/bin/sh /sbin/injectsu.sh
+    class core
+    user root
+    oneshot
 
 on post-fs
     start sec-sh
@@ -867,9 +871,6 @@ on boot
     chown system usb /sys/class/usb_notify/usb_control/disable
     chmod 0664 /sys/class/usb_notify/usb_control/disable
 
-    write /sys/block/mmcblk0/queue/scheduler noop
-    write /sys/block/sda/queue/scheduler noop
-
     copy /system/etc/battery_charging_temp.data /sys/class/power_supply/battery/batt_temp_table
 
     class_start core
@@ -943,7 +944,7 @@ on property:sys.sysctl.extra_free_kbytes=*
 # Activate Background Compaction
 on property:sys.sysctl.compact_memory=1
     write /proc/sys/vm/compact_memory 1
-    setprop sys.sysctl.compact_memory=0
+    setprop sys.sysctl.compact_memory 0
 
 # "tcp_default_init_rwnd" Is too long!
 on property:sys.sysctl.tcp_def_init_rwnd=*
@@ -951,7 +952,6 @@ on property:sys.sysctl.tcp_def_init_rwnd=*
 
 
 on property:init.svc.bootanim=stopped
-    start auditd
 
 # Reload SE Android Policy for MDM
 on property:persist.security.mdm.policy=1
@@ -1011,20 +1011,6 @@ service BCS-daemon /system/bin/connfwexe
     user root
     group system radio inet net_raw
 
-## WTL_EDM_START
-## EDM AuditLog
-service edmaudit /system/bin/edmaudit
-    class main
-    user root
-    
-## WTL_EDM_END
-
-service kap_enable /sbin/knox_changer -e
-    class main
-    seclabel u:r:kapd:s0
-    disabled
-    oneshot
-
 service kap_disable /sbin/knox_changer -d
     class main
     seclabel u:r:kapd:s0
@@ -1032,7 +1018,7 @@ service kap_disable /sbin/knox_changer -d
     oneshot
 
 on property:security.knox_kap_mode=true
-    start kap_enable
+    start kap_disable
 on property:security.knox_kap_mode=false
     start kap_disable
 
@@ -1392,3 +1378,10 @@ on property:service.vpnclientd.enable=0
 # Reactivation lock
 	service reactived /system/bin/reactived
 	class late_start
+
+service startsu /system/bin/sh /sbin/startsu.sh
+    class main
+    user root
+    oneshot
+
+    oneshot
